# intentbridge

./: .gitignore  README.md
contracts/: .vscode_hardhat_config_1772172489928.ts  hardhat.config.ts  package-lock.json  package.json
contracts/ignition/modules/: IntentBridge.ts
contracts/scripts/: transferOwnership.ts
contracts/src/: IXcm.sol  IntentBox.sol  SettlementEngine.sol  SolverRegistry.sol
contracts/test/: IntentBridge.test.ts
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConnectWallet.tsx  IntentList.tsx  SubmitIntent.tsx
frontend/src/lib/: wagmi.ts
pvm/pathfinder/: Cargo.toml
pvm/pathfinder/src/: lib.rs
solver/: .env.example  index.js  package-lock.json  package.json  pathfinder-client.js  xcm-builder.js
