[package]
name = "pathfinder"
version = "1.0.0"
authors = ["Rama"]
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[profile.release]
overflow-checks = false
opt-level = "z"
